--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,11 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="30dp"/>
+    <Button
+        android:id="@+id/btn_go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="初始化数据"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
